# project/RealEstate/api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: API Real Estate
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -18,6 +18,7 @@ consumes:
 produces:
   - application/json
 paths:
+  # Pattern API
   /Pattern:
     x-swagger-router-controller: patterns_controller
     get:
@@ -59,6 +60,8 @@ paths:
       parameters:
         - name: "typeQuery"
           type: "number"
+          minimum: 0
+          maximum: 3
           in: "query"
           required: true
           description: "Find By: 0 - patternID,\r\n 1 - SiteID,\r\n 2 - PatternCategoryID,\r\n 3 - SiteID and PatternCategoryID"
@@ -98,6 +101,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     put:
+      operationId: updatePatterns
       summary: Cập nhật pattern
       description: Cập nhật pattern theo patternID
       parameters:
@@ -105,7 +109,7 @@ paths:
           in: path
           required: true
           type: number
-        - name: patternCategoryID
+        - name: payload
           in: body
           required: true
           schema:
@@ -120,6 +124,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     delete:
+      operationId: deletePatterns
       summary: Xóa pattern
       description: Xóa pattern theo patternID
       parameters:
@@ -136,7 +141,39 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    
+  
+  # Crawler API
+  /Crawler/CollectDetailURL:
+    x-swagger-router-controller: crawler_controller
+    get:
+      description: "Lấy URL chi tiết của 1 page bds"
+      parameters:
+        - name: categoryURL
+          in: query
+          type: string
+          required: true
+        - name: patternURL
+          in: query
+          type: string
+          required: true
+        - name: typePage
+          in: query
+          type: string
+          required: true
+        - name: pageLimit
+          in: query
+          type: number
+          required: false
+        
+      responses:
+        "200":
+          description: "Lấy URL thành công"
+          schema:
+            $ref: "#/definitions/CrawlerResponse"
+        default:
+          description: "Error"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -153,6 +190,29 @@ definitions:
       success:
         type: number
         description: returns 1 if successful
+      description:
+        type: string
+        description: a short comment 
+    required:
+      - success
+      - description
+  CrawlerResponse:
+    type: object
+    properties:
+      success:
+        type: number
+        description: returns 1 if successful
+      data:
+        type: array
+        items:
+          type: object
+          properties:
+            pageNumber:
+              type: number
+              description: "Số trang hiện tại của URL"
+            URL:
+              type: string
+              description: "URL được lấy về"
       description:
         type: string
         description: a short comment 
@@ -200,5 +260,5 @@ definitions:
       description:
         type: string
         description: Mo ta
-      
+  
       
